tests/baselines/reference/missingImportAfterModuleImport.errors.txt
missingImportAfterModuleImport_1.ts(2,1): error TS18056: Declaration file contains synthesized file reference directives: '"missingImportAfterModuleImport_0.d.ts"'


==== missingImportAfterModuleImport_1.ts (1 errors) ====
    ///<reference path='missingImportAfterModuleImport_0.ts'/>
    import SubModule = require('SubModule');
    ~~~~~~
!!! error TS18056: Declaration file contains synthesized file reference directives: '"missingImportAfterModuleImport_0.d.ts"'
    class MainModule {
        // public static SubModule: SubModule;
        public SubModule: SubModule;
        constructor() { }
    }
    export = MainModule;
    
    
==== missingImportAfterModuleImport_0.ts (0 errors) ====
    declare module "SubModule" {
        class SubModule {
            public static StaticVar: number;
            public InstanceVar: number;
            constructor();
        }
        export = SubModule;
    }
    